<resources>
    <string name="app_name">IDO demo</string>
    <string name="device_connect">Device Connect</string>
    <string name="disconnect">Device  disconnect</string>
    <string name="device_bind">Device Bind</string>
    <string name="device_unbind">Device UnBind</string>
    <string name="connect_state_start">Connect start</string>
    <string name="connect_state_ing">Connecting...</string>
    <string name="connect_state_failed">Connect failed</string>
    <string name="get_function">Get Function</string>
    <string name="getdeviceinfo">getDeviceInfo</string>
    <string name="get_device_information">Get Device Information</string>
    <string name="getfunctiontable">getFunctionTable</string>
    <string name="getsn">getSn</string>
    <string name="get_sn_information">Get SN information</string>
    <string name="getmenulist">getMenuList</string>
    <string name="get_supported_menu_list">get supported Menu List</string>
    <string name="getnoticestatus">getNoticeStatus</string>
    <string name="get_notification_center_status_event_number">Get notification center status event number</string>
    <string name="getmainsportgoal">getMainSportGoal</string>
    <string name="getwatchdiallinfo">getWatchDiallinfo</string>
    <string name="get_screen_information">Get Screen Information</string>
    <string name="set_function">Set Function</string>
    <string name="setdatetime">setDateTime</string>
    <string name="set_time">set Time</string>
    <string name="parameter">Parameter</string>
    <string name="parameter_et">Parameter import</string>
    <string name="send">send</string>
    <string name="response">Response</string>
    <string name="start_sync_data">Start Sync Data</string>
    <string name="stop_sync_data">Stop Sync Data</string>
    <string name="progress">Progress :</string>
    <string name="sync_data">Sync Data</string>
    <string name="sdk_feature_test">SDK Feature Test</string>
    <string name="sdk_feature_refresh">Refresh</string>
    <string name="sdk_feature_clear">Clear</string>
    <string name="transfer_file">Transfer File</string>
    <string name="stop">stop</string>
    <string name="setblevoice">setBleVoice</string>
    <string name="set_phone_volume_for_device_event_number">Set phone volume for device event number</string>
    <string name="function">Function</string>
    <string name="alexa">Alexa</string>
    <string name="login">login</string>
    <string name="logout">logout</string>
    <string name="alexa_dialog_title">Message</string>
    <string name="alexa_dialog_msg">Your pair code is %s, The Alexa login page will open. Do you want to continue?</string>
    <string name="alexa_dialog_copy">Copy and continue</string>
    <string name="alexa_dialog_cancel">Cancel</string>
    <string name="set_send_run_plan">App distributes running plan (exercise plan)</string>
    <string name="set_dial_order">Set dial order</string>
    <string name="set_walk_remiders_time">Set time points for multiple walking reminders</string>
    <string name="set_weather_v3">V3 weather protocol issued by v3</string>
    <string name="v3_set_message_notification_status">V3 Set Message Notification Status</string>
    <string name="v3_get_message_notification_status">V3 get Message Notification Status</string>
    <string name="v3_updata_message_notification_status">V3 updata Message Notification Status</string>
    <string name="menu_log_export">Export Log</string>
    <string name="menu_log_app">App Log</string>
    <string name="menu_log_ble">Ble Log</string>
    <string name="sport">Sport</string>
    <string name="sport_start">Start Sport</string>
    <string name="sport_pause">Pause Sport</string>
    <string name="sport_resume">Resume Sport</string>
    <string name="sport_end">End Sport</string>
    <string name="setmainuisortv3">V3 Setting the Sorting of Main Interface Controls</string>
    <string name="setwatchfacedata"> Setting the dial</string>
    <string name="setmusicoperate"> Operate songs or folders </string>
    <string name="setnotificationstatus"> The mobile app uses this command switch to notify application status settings </string>
    <string name="setfitnessguidance">" Fitness guidance "</string>
    <string name="setscientificsleepswitch"> Set scientific sleep switch </string>
    <string name="settemperatureswitch"> Set night temperature switch </string>
    <string name="setv3noise"> Switches and thresholds for ambient volume </string>
    <string name="setheartmode"> Set heart rate mode </string>
    <string name="setheartratemodesmart"> Intelligent heart rate mode setting </string>
    <string name="settakingmedicinereminder"> Set medication reminder</string>
    <string name="setblevoiceble"> Send mobile volume down to ble</string>
    <string name="setlongsit">Set up long sitting</string>
    <string name="setlostfind">Set anti loss</string>
    <string name="setsportgoal"> Set motion goals </string>
    <string name="setunit"> Set Units</string>
    <string name="setuphandgesture"> Raise your hand to light up the screen</string>
    <string name="setmusiconoff">" Music switch "</string>
    <string name="setdisplaymode">display mode</string>
    <string name="setsportmodeselect">" Set sports mode selection "</string>
    <string name="setsleepperiod"> Set sleep time period</string>
    <string name="setweatherdata"> Set weather data</string>
    <string name="setweathersuntime"> Set sunrise and sunset time</string>
    <string name="setwatchdial">Setting the dial</string>
    <string name="setshortcut"> Set Shortcut </string>
    <string name="setbpcalibration"> Blood pressure calibration </string>
    <string name="setbpmeasurement"> Blood pressure measurement</string>
    <string name="setstresscalibration"> pressure calibration</string>
    <string name="getapplet"> get Applet</string>
    <string name="setapplet"> set Applet</string>
    <string name="setgpscontrol">Control GPS</string>
    <string name="setspo2switch">Set blood oxygen switch</string>
    <string name="sethandwashingreminder">Set hand washing reminder</string>
    <string name="setnoticeappname"> V3 dynamic message notification</string>
    <string name="setsynccontact">Synchronize frequently used contacts</string>
    <string name="musiccontrol">Control Music v3 Protocol</string>
    <string name="noticemessagev3">Notification message reminder v3 protocol</string>
    <string name="setbpcalcontrolv3">V3 blood pressure calibration control</string>
    <string name="setbasesportparamsortv3">V3 Set the data arrangement of motion sub items</string>
    <string name="setschedulerreminderv3">V3 Set Schedule Reminder</string>
    <string name="set100sportsortv3">V3 New 100 Motion Sorting</string>
    <string name="setwallpaperdialreplyv3">V3 Set  the photo dial</string>
    <string name="setvoicereplytxtv3">V3 voice reply text</string>
    <string name="settime">set time</string>
    <string name="setfindphone">Set up search phone</string>
    <string name="setonekeysos">Set up one click call</string>
    <string name="setweatherswitch">Set weather switch</string>
    <string name="setunreadappreminder">Gt01_ The red dot prompt switch for unread information on newly added requirements in the pro app</string>
    <string name="setweathercityname">Set Weather City Name</string>
    <string name="setsportmodesort"> Set Sport Mode Sorting</string>
    <string name="setrrespirateturn"> Set respiratory rate switch</string>
    <string name="setbodypowerturn"> Set body power switch</string>
    <string name="setworldtimev3">V3 issued v3 world time</string>
    <string name="getsninfo">Get sn</string>
    <string name="getbtname"> Obtain BT Bluetooth name </string>
    <string name="getlivedata"> Obtain real-time data </string>
    <string name="gethidinfo">"Obtain hid information</string>
    <string name="getgpsinfo">Obtain GPS information</string>
    <string name="getgpsstatus">Obtain GPS status</string>
    <string name="gethotstartparam">Obtain hot start parameters</string>
    <string name="getversioninfo">Obtain version information</string>
    <string name="getmtuinfo">Obtain mtu information</string>
    <string name="getAlgFileInfo">Get firmware algorithm file information (ACC/GPS)</string>
    <string name="requestAlgFile">Request firmware algorithm file information (ACC/GPS)</string>
    <string name="getnotdisturbstatus">Obtain Do Not Disturb Mode Status</string>
    <string name="getdownlanguage">Get download language support</string>
    <string name="geterrorrecord">Get error records</string>
    <string name="getmainsportgoalordistance">Get the set calorie/distance/medium to high exercise duration main interface</string>
    <string name="getwalkremind">Get Walk Reminder</string>
    <string name="getbatteryinfo">Obtain battery information</string>
    <string name="getflashbininfo">Obtain font information</string>
    <string name="getsupportedlist">Obtain menu list</string>
    <string name="getscreenbrightness">Obtain screen brightness</string>
    <string name="getuphandgesture">Obtain wrist lift data</string>
    <string name="getupdatestatus">Obtain device upgrade status</string>
    <string name="getwatchdialid">Obtain dial ID</string>
    <string name="getwatchdialinfo">Obtain screen information</string>
    <string name="getdevicename">Get Watch Name</string>
    <string name="getdevicelogstate">Obtain the log status of the device</string>
    <string name="getallhealthswitchstate">Obtain all health monitoring switches</string>
    <string name="getactivityswitch">Acquisition of automatic recognition switch for sports mode</string>
    <string name="end_device_search">End device search</string>
    <string name="getstressval">Obtain pressure values</string>
    <string name="getbpalgversion">Obtain Level 3 version number information of blood pressure algorithm Event number</string>
    <string name="getheartratemode">Obtain heart rate monitoring mode</string>
    <string name="getstepgoal">Get the goal of all day steps</string>
    <string name="getwatchfacelist">Obtain a list of dials</string>
    <string name="getbtnotice">Query BT pairing switch, connection, a2dp connection, and hfp connection status (only supports devices with BT Bluetooth)</string>
    <string name="getalarmv3">V3 app obtains alarm clock for ble</string>
    <string name="getlanguagelibrarydatav3">V3 Get Device Font List</string>
    <string name="getwatchlistv3">V3 Get dial list</string>
    <string name="getblebeepv3">V3 obtaining firmware local prompt file information</string>
    <string name="gethabitinfov3">Obtaining User Habit Information Event Obtaining User Habit Information</string>
    <string name="getsupportmaxsetitemsnum">Maximum number of settings for obtaining firmware support details</string>
    <string name="getunerasablemeunlist">Obtain a list of firmware non removable quick applications</string>
    <string name="music_query">Query song information</string>
    <string name="music_sheet_title">Playlist management</string>
    <string name="music_input_sheet_name">Enter playlist name</string>
    <string name="music_new_sheet">New Playlist</string>
    <string name="music_input_sheet_id">Enter the playlist ID (obtained in the query result)</string>
    <string name="music_delete_sheet">delete playlist</string>
    <string name="music_title">song management\n仅支持44.1hz采样率的歌曲</string>
    <string name="music_select">choose</string>
    <string name="music_input_music_name">Enter the song file name (suffix.mp3)</string>
    <string name="music_add_2_sheet">add playlist</string>
    <string name="music_add_music">add song</string>
    <string name="music_clean_transfer">clean transfer</string>
    <string name="music_delete">delete song</string>
    <string name="music_input_music_id">Enter the song ID (obtained in the query result)</string>
    <string name="music_add_music_2_sheet_btn">Add song to playlist</string>
</resources>