<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MusicTransferActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="btQueryMusic"
                android:text="@string/music_query"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/music_sheet_title"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etSheetName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/black"
                android:hint="@string/music_input_sheet_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btNewSheet"
                android:text="@string/music_new_sheet"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etSheetId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@color/black"
                android:hint="@string/music_input_sheet_id"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btDeleteSheet"
                android:text="@string/music_delete_sheet"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="8dp"
                android:text="@string/music_title"
                android:textColor="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etMusicPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/btSelectMusicFile"
                    android:background="@color/black"
                    android:hint="请选择歌曲文件..."
                    android:minHeight="40dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <Button
                    android:id="@+id/btSelectMusicFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:onClick="btSelectMusicFile"
                    android:text="@string/music_select"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <EditText
                android:id="@+id/etMusicName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@+id/cbAddMusic2Sheet"
                android:background="@color/black"
                android:hint="@string/music_input_music_name"
                android:minHeight="40dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/cbAddMusic2Sheet"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/music_add_2_sheet" />

                <Spinner
                    android:id="@+id/sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minWidth="100dp"
                    android:tooltipText="选择歌单" />
            </LinearLayout>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/music_progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btAddMusic"
                android:text="@string/music_add_music"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/music_clean_transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music_clean_transfer"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/etMusicId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@color/black"
                android:hint="@string/music_input_music_id"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btDeleteMusic"
                android:text="@string/music_delete"
                android:textColor="@color/white" />


            <EditText
                android:id="@+id/etAddMusicId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@color/black"
                android:hint="@string/music_input_music_id"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/etAddSheetId"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@color/black"
                android:hint="@string/music_input_sheet_id"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btAddMusic2Folder"
                android:text="@string/music_add_music_2_sheet_btn"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>