<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TextView
        android:id="@+id/tv_start"
        android:layout_width="300dp"
        android:layout_height="50dp"
        tools:text="@string/start_sync_data"
        android:gravity="center"
        android:onClick="start"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_send"/>
    <TextView
        android:id="@+id/tv_stop"
        android:layout_width="300dp"
        android:layout_height="50dp"
        tools:text="@string/stop_sync_data"
        android:gravity="center"
        android:onClick="stop"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_btn_send"/>
    <LinearLayout
        android:id="@+id/ll_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress"
            />
        <TextView
            android:id="@+id/progress_namber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10%"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/color_808080">
        <TextView
            android:id="@+id/tv_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="successfull"
            />
    </ScrollView>

</LinearLayout>